[gd_scene load_steps=8 format=3 uid="uid://bke3avfmpg1ig"]

[ext_resource type="Script" path="res://GUI/health_bar/enemy_health_bar.gd" id="1_u0pk1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6liwc"]
bg_color = Color(0, 0, 0, 0.407843)
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hdh6n"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_00k2p"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k2beo"]
bg_color = Color(1, 1, 1, 0.701961)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sv8a4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_os7gg"]
bg_color = Color(0.627451, 0.980392, 0, 0.819608)

[node name="MaxHealthBar" type="ProgressBar"]
z_index = 500
anchors_preset = -1
anchor_right = 0.061
anchor_bottom = 0.619
offset_right = 915.674
offset_bottom = -423.392
theme_override_styles/background = SubResource("StyleBoxFlat_6liwc")
theme_override_styles/fill = SubResource("StyleBoxFlat_hdh6n")
max_value = 5.0
show_percentage = false
script = ExtResource("1_u0pk1")

[node name="DamageBar" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxEmpty_00k2p")
theme_override_styles/fill = SubResource("StyleBoxFlat_k2beo")
value = 70.0
show_percentage = false

[node name="HealthBar" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxEmpty_sv8a4")
theme_override_styles/fill = SubResource("StyleBoxFlat_os7gg")
value = 60.0
show_percentage = false

[node name="Timer" type="Timer" parent="."]
wait_time = 0.598

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
